# micrograd

./: pyproject.toml  workbook.org
