[tool.poetry]
name = "micrograd"
version = "0.0.1"
description = ""
authors = ["David Haley <davidhaley@protonmail.com>"]
readme = "README.md"
packages = [{include = "micrograd"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
